--- a/events-api/pom.xml
+++ b/events-api/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mnode.ical4j/ical4j -->
+		<dependency>
+		    <groupId>org.mnode.ical4j</groupId>
+		    <artifactId>ical4j</artifactId>
+		    <version>3.0.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
