--- a/events-api/pom.xml
+++ b/events-api/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.mnode.ical4j/ical4j -->
 		<dependency>
 		    <groupId>org.mnode.ical4j</groupId>
