--- a/events-api/pom.xml
+++ b/events-api/pom.xml
@@ -68,9 +68,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>2.1.6.RELEASE</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>5.1.8.RELEASE</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mnode.ical4j/ical4j -->
